--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ nuscenes-devkit
 opencv-python==4.6.0.66
 tensorboardX==2.2
 matplotlib==3.5.1
+scikit-learn==1.1.2
+scikit-image==0.19.3
+protobuf==3.19.4
+tensorboard==2.10.0
